--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Challenge of Quorum IT",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "nodemon --legacy-watch index.js",
     "test": "test"
   },
   "author": "Martin Bertello",
@@ -13,11 +13,14 @@
     "@prisma/client": "^3.14.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "compression": "^1.7.4",
     "cors": "2.8.5",
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "8.5.1",
     "nodemon": "2.0.16",
-    "prisma": "^3.14.0"
+    "prisma": "^3.14.0",
+    "socket.io": "^4.5.1"
   }
 }
