--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "8.5.1",
     "nodemon": "2.0.16",
-    "prisma": "^3.14.0",
-    "socket.io": "^4.5.1"
+    "prisma": "^3.14.0"
   }
 }
