--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.14.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "compression": "^1.7.4",
     "cors": "2.8.5",
@@ -20,6 +20,8 @@
     "helmet": "^5.1.0",
     "jsonwebtoken": "8.5.1",
     "nodemon": "2.0.16",
-    "prisma": "^3.14.0"
+    "prisma": "^3.14.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   }
 }
