--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "fs": "^0.0.1-security",
     "helmet": "^5.1.0",
     "jsonwebtoken": "8.5.1",
-    "prisma": "^3.14.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
+  },
+  "devDependencies": {
+    "prisma": "^3.14.0"
   }
 }
